--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,21 +10,12 @@
       <h1><a href="/">Django Girls Blog</a></h1>
     </header>
 
+{% for post in posts %}
     <article>
-      <time datetime="">Published: 26.04.2025 13:23</time>
-      <h2><a href="">My first post</a></h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, beatae?
-      </p>
+      <time datetime="">Published: {{ post.published_date }}</time>
+      <h2><a href="">{{ post.title }}</a></h2>
+      <p>{{ post.text|linebreaksbr }}</p>
     </article>
-
-    <article>
-      <time datetime="">Published: 26.04.2025 14:00</time>
-      <h2><a href="">My second post</a></h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur,
-        molestias?
-      </p>
-    </article>
+{% endfor %}
   </body>
 </html>
